--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -85,6 +85,88 @@ $icon-font-path: '../fonts/';
   //-------------------------------------
   // section-contact
   //-------------------------------------
+  #section-contact-child {
+    text-align: left;
+  }
+
+  #section-contact-flex {
+    @include flex-container;
+  }
+
+  #contact-right {
+    flex: 1 70%;
+    order: 2;
+    @include flex-container;
+    flex-flow: row wrap;
+    padding-top: 200px;
+    max-width: 500px;
+
+    #contact-text {
+      font-size: 22px;
+      flex: 1 100%;
+    }
+
+    .line {
+      flex: 1 100%;
+      border-bottom: solid white 1px;
+      margin: 1em 0em;
+    }
+
+    #contact-fields {
+      flex: 1 1 60%;
+      @include flex-container;
+      justify-content: flex-end;
+      flex-flow: row wrap;
+
+      input[type=text] {
+        border: none;
+        padding: 8px;
+        font-size: 22px;
+        flex: 1 100%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        margin: 0.2em 0em;
+      }
+
+      .line {
+        flex: 1 100%;
+        border-bottom: solid white 1px;
+        margin: 1.8em 0em 2em;
+      }
+
+      a {
+        display: block;
+      }
+    }
+
+    #contact-info {
+      flex: 1 1 35%;
+      margin-left: 5%;
+      font-size: 18px;
+      line-height: 2em;
+      a {
+        color: white;
+      }
+    }
+  }
+
+  #contact-quote {
+    flex: 1 30%;
+    order: 1;
+    .quote {
+      position: relative;
+      text-align: center;
+      margin: 1em auto;
+      max-width: 27em;
+    }
+
+    .quote-attrib {
+      margin: 0.5em 0em;
+    }
+
+    padding-top: 200px;
+  }
 
   //-------------------------------------
   // section-story-type
