--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -575,6 +575,12 @@ $icon-font-path: '../fonts/';
         line-height: 2.0em;
         margin: 1em 0em 0em;
         font-size: 14px;
+        .story-desktop-copy {
+          display: none;
+        }
+        .story-mobile-copy {
+          display: inline;
+        }
       }
     }
 
@@ -587,7 +593,7 @@ $icon-font-path: '../fonts/';
 
       .story-type {
         flex: 1;
-        margin: 1.5em;
+        margin: 4vmax 0em;
         max-height: 12em;
         max-width: 12em;
         height: 3em;
@@ -595,8 +601,8 @@ $icon-font-path: '../fonts/';
           color: white;
         }
         img {
-          height: 100%;
-          height: 30px;
+          //height: 100%;
+          height: 8vmax;
         }
         span {
           display: block;
