--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -337,8 +337,8 @@ $icon-font-path: '../fonts/';
     padding-left: 0px;
     padding-top: 20px;
 
-    -webkit-transition: width 1.0s ease, padding 1.0s ease;
-    transition: width 1.0s ease, padding 1.0s ease;
+    -webkit-transition: width 0.6s ease, padding 0.6s ease;
+    transition: width 0.6s ease, padding 0.6s ease;
   }
 
   .mobile-menu-fixed-open {
@@ -358,12 +358,13 @@ $icon-font-path: '../fonts/';
 
     a {
       color: #ddd;
+      text-decoration: none;
     }
 
     .btn-close {
       position: absolute;
       top: 0px;
-      right: -2px;
+      right: 0px;
       background: none;
       border:none;
       padding: 0px;
@@ -376,19 +377,33 @@ $icon-font-path: '../fonts/';
 
     ul {
       padding: 0px;
+      margin: 0px;
       li {
+        font-size: 26px;
         list-style: none;
+        height: 50px;
       }
     }
 
     .mobile-nav {
+      position: relative;
       text-align:right;
       font-weight: 500;
       font-size: 20px;
       margin-bottom: 20px;
+    }
 
-      li {
-        height: 38px;
+    @media screen and (max-height: 400px) {
+      .mobile-nav .section-1 {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+      }
+
+      .mobile-nav .section-2 {
+        position: absolute;
+        left: 200px;
+        top: 0px;
       }
     }
   }
