Some performance updates and some integration of the new focus switching for turning on and off the video

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -464,6 +464,7 @@ $icon-font-path: '../fonts/';
     width: 100%;
     margin: 0px;
     padding: 0px;
+    top: -2000px;
   }
 
   .section-child {
