--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -1007,9 +1007,8 @@ $icon-font-path: '../fonts/';
   .subsection {
     background-color: #081325;
     width: 100%;
-    height: 100%;
+    //height: 100%;
     overflow: scroll;
-    display: none;
   }
 
   .subsection-child {
@@ -1229,7 +1228,6 @@ $icon-font-path: '../fonts/';
   // section-broadcast
   //-------------------------------------
   #subsection-broadcast {
-    display: none;
     padding: 4em 0em;
 
     #broadcast-image {
@@ -1261,7 +1259,6 @@ $icon-font-path: '../fonts/';
   //-------------------------------------
   #subsection-workshop-detail {
     padding: 0em 0em 4em;
-
 
     #workshop-image {
       width: 450px;
@@ -1333,4 +1330,52 @@ $icon-font-path: '../fonts/';
       }
     }
   }
+
+
+  /*======================================================*\
+   * Subsection Carousel
+  \*======================================================*/
+  #subsection-carousel {
+    display: none;
+
+    .item {
+      height: 100vh;
+      overflow: auto;
+    }
+
+    .subsectionDock {
+      position:fixed;
+      bottom: 0px;
+      left:50%;
+      transform: translate(-50%, 0);
+      width:36rem; 
+      height: 4rem;
+      background-color: #25383C;
+      vertical-align: bottom;
+      .dockItem {
+        border: none;
+        padding: 0rem;
+        margin: 1rem;
+          display: inline-block;
+          height: 2rem;
+        a {
+          color: white;
+        }
+        img {
+          height: 100%;
+        }
+      }
+      .dockItem:hover {
+        background-color: none;
+      }
+      .activeDockItem {
+        height: 3rem;
+        margin-top: 0rem;
+      }
+    }
+    .owl-item {
+      height:100vh;
+    }
+  }
 }
+
