--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -1007,13 +1007,13 @@ $icon-font-path: '../fonts/';
   .subsection {
     background-color: #081325;
     width: 100%;
-    //height: 100%;
-    overflow: scroll;
   }
 
   .subsection-child {
+    position: relative;
     max-width: 650px;
     margin: 0 auto;
+    padding-bottom: 100px;
     text-align: center;
 
     h1 {
@@ -1331,16 +1331,35 @@ $icon-font-path: '../fonts/';
     }
   }
 
-
   /*======================================================*\
    * Subsection Carousel
   \*======================================================*/
   #subsection-carousel {
+    position: relative;
     display: none;
+    margin: auto auto;
+    height: 100vh;
 
     .item {
-      height: 100vh;
-      overflow: auto;
+    }
+
+    .owl-carousel {
+      position:relative;
+      height: calc(100% - 4rem);
+
+      .owl-wrapper-outer {
+        height: 100%;
+      }
+
+      .owl-wrapper {
+        position: inherit;
+        height: 100%;
+      }
+
+      .owl-item {
+        height: 100%;
+        overflow: auto;
+      }
     }
 
     .subsectionDock {
@@ -1348,10 +1367,11 @@ $icon-font-path: '../fonts/';
       bottom: 0px;
       left:50%;
       transform: translate(-50%, 0);
-      width:36rem; 
+      width:100%;
       height: 4rem;
       background-color: #25383C;
       vertical-align: bottom;
+
       .dockItem {
         border: none;
         padding: 0rem;
@@ -1364,16 +1384,15 @@ $icon-font-path: '../fonts/';
           height: 100%;
         }
       }
+
       .dockItem:hover {
         background-color: none;
       }
+
       .activeDockItem {
         height: 3rem;
         margin-top: 0rem;
       }
-    }
-    .owl-item {
-      height:100vh;
     }
   }
 }
