Fix a few more items related to the subsection styling

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -586,7 +586,7 @@ $icon-font-path: '../fonts/';
       }
     }
 
-    .subsectionDock {
+    .subsection-dock {
       position:absolute;
     }
   }
