--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -155,6 +155,7 @@ $icon-font-path: '../fonts/';
     display: block;
     flex: 1 30%;
     order: 1;
+    margin-right: 40px;
     .quote {
       position: relative;
       text-align: center;
@@ -566,9 +567,8 @@ $icon-font-path: '../fonts/';
   \*======================================================*/
   #subsection-carousel {
     width: 75%;
-    height: 90vh;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    height: 85vh;
+    margin-top: 50px;
     min-width: 568px;
 
     .owl-carousel {
@@ -588,6 +588,26 @@ $icon-font-path: '../fonts/';
 
     .subsection-dock {
       position:absolute;
+    }
+  }
+
+  #subsection-close {
+    background-color: #25383C;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 5000;
+    font-size: 20px;
+    text-align: center;
+
+    a, a:visited {
+      color: white;
+    }
+
+    a:hover {
+      color: #CCC;
     }
   }
 }
