Restore workshop detail as separate subsection from carousel

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -1221,6 +1221,7 @@ $icon-font-path: '../fonts/';
   //-------------------------------------
   #subsection-workshop-detail {
     padding: 0em 0em 4em;
+    display: none;
 
     #workshop-image {
       width: 450px;
