--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -1220,8 +1220,14 @@ $icon-font-path: '../fonts/';
   // section-workshop
   //-------------------------------------
   #subsection-workshop-detail {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
     padding: 0em 0em 4em;
     display: none;
+    overflow: scroll;
 
     #workshop-image {
       width: 450px;
