--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -1365,5 +1365,9 @@ $icon-font-path: '../fonts/';
   #subsection-close {
     display: none;
   }
+
+  #workshop-close {
+    display: none;
+  }
 }
 
