Update cassette links and Broadcast examples

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -1257,7 +1257,7 @@ $icon-font-path: '../fonts/';
 
     .broadcast-examples-row {
       .broadcast-example {
-
+        margin: 0.4em;
       }
     }
   }
